@@ -1,5 +1,6 @@
 2011-02-13
 * only pass data between cpio header and trailer to the cpio unpacker.
+* start inlining methods in certain checks that don't have to be separate
 
 2011-02-12
 * add proper options to license scanning program
